tests/type/good/base-class02.py
class Test:
    def print(self):
        print("HELLO")

var = Test()
var.print()
