tests/type/bad/field-vs-method.py
class Test:
    def test(self):
        self.test = 0
        self.test()

var = Test()
var.test()
